added home html templates

--- a/templates/login.html
+++ b/templates/login.html
@@ -3,14 +3,11 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Home</title>
+		<title>Log In</title>
 	</head>
 	<body>
-		<h1>Home Page! Digital book club📚</h1>
-		<h3>
-			Navigation: about, contact, explore
-			<p>login (input)</p>
-			<p>sign up (link to page)</p>
-		</h3>
+		<h1>Login Page</h1>
+		<p>Form to login</p>
+		<p>Link to create account and redirects</p>
 	</body>
 </html>
