--- a/templates/contact.html
+++ b/templates/contact.html
@@ -3,14 +3,10 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Home</title>
+		<title>Contact</title>
 	</head>
 	<body>
-		<h1>Home Page! Digital book club📚</h1>
-		<h3>
-			Navigation: about, contact, explore
-			<p>login (input)</p>
-			<p>sign up (link to page)</p>
-		</h3>
+		<h1>Contact Page</h1>
+		<p>Input form for feedback and display our contact info</p>
 	</body>
 </html>
