modify html skeleton templates

--- a/templates/home.html
+++ b/templates/home.html
@@ -8,9 +8,8 @@
 	<body>
 		<h1>Home Page! Digital book club📚</h1>
 		<h3>
-			Navigation: about, contact, explore
-			<p>login (input)</p>
-			<p>sign up (link to page)</p>
+			<p>login form (input)</p>
+			<p>create account (link to page)</p>
 		</h3>
 	</body>
 </html>
