--- a/templates/signout.html
+++ b/templates/signout.html
@@ -3,15 +3,14 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Explore</title>
+		<title>Sign Out</title>
 	</head>
 	<body>
-		<h1>Explore Page</h1>
-		<p>Book club overview noting features and functionality.</p>
+		<h1>Sign out</h1>
+		<h3>thank you message to member</h3>
 		<ul>
-			<li>app features</li>
-			<li>about creators</li>
-			<li>contact</li>
+			<li>link to redirect to home (redirect)</li>
+			<li>link to sign back in (redirect)</li>
 		</ul>
 	</body>
 </html>
