--- a/templates/create-acct.html
+++ b/templates/create-acct.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>Create Account</title>
 </head>
 <body>
-    <h1>About Us</h1></br>
+    <h1>Create Account</h1></br>
     <h3>
-        Inspiration behind app creation and its purpose
-        <p>Info/backstory of app creators :)</p>
+        Form for user to create account 
     </h3>
 </body>
 </html>
