--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,19 @@
-<!DOCTYPE html>
+${header}
+<h1>${title}</h1>
+<form method="POST">
+	<label>
+		Username:
+		<input name="username" type="text" autofocus />
+	</label>
+	<label>
+		Password:
+		<input name="password" type="password" />
+	</label>
+	<input type="submit" value="do it!" />
+</form>
+${footer}
+
+<!-- <!DOCTYPE html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
@@ -12,4 +27,4 @@
 			<p>create account (link to page)</p>
 		</h3>
 	</body>
-</html>
+</html> -->
