--- a/templates/create-acct.html
+++ b/templates/create-acct.html
@@ -1,14 +1,43 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create Account</title>
-</head>
-<body>
-    <h1>Create Account</h1></br>
-    <h3>
-        Form for user to create account 
-    </h3>
-</body>
+${header}
+<html>
+	<body>
+	<div class="container">
+	<form align="center" method="POST" action="/user/home">
+		<p><h2>Become a Member!</h2></p>
+		<div class="form-group">
+			<label>
+				First Name:
+				<input name="firstname" type="text" placeholder="Enter first name" autofocus />
+			</label>
+		</div>	
+	</br>
+		<div class="form-group">
+			<label>
+				Last Name:
+				<input name="lastname" type="text"/>
+			</label>
+		</div>
+	</br>
+		<div class="form-group">
+			<label>
+				Username:
+				<input name="username" type="text" />
+			</label>
+		</div>
+	</br>
+		<div class="form-group">
+			<label>
+				Password:
+				<input name="password" type="password" />
+			</label>
+		</div>
+	</br>
+		<div class="form-group">
+			<input type="submit" value="Submit" />
+	</form>
+	</div>
+	</body>
 </html>
+
+
+
