--- a/templates/home.html
+++ b/templates/home.html
@@ -1,30 +1,38 @@
 ${header}
-<h1>${title}</h1>
-<form method="POST">
-	<label>
-		Username:
-		<input name="username" type="text" autofocus />
-	</label>
-	<label>
-		Password:
-		<input name="password" type="password" />
-	</label>
-	<input type="submit" value="do it!" />
-</form>
-${footer}
 
-<!-- <!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Home</title>
-	</head>
-	<body>
-		<h1>Home Page! Digital book club📚</h1>
-		<h3>
-			<p>login form (input)</p>
-			<p>create account (link to page)</p>
-		</h3>
-	</body>
-</html> -->
+<html>
+<body>	
+	<div class="container">
+		<form align="center" method="POST" action="/user/new">
+			<div class="form-group">
+				<label for="username">Username</label>
+				<input
+					type="text"
+					class="form-control"
+					id="username"
+					placeholder="Enter username"
+					autofocus
+				/>
+			</div>
+		</br>
+			<div class="form-group">
+				<label for="password">Password</label>
+				<input
+					name="password"
+					type="password"
+					class="form-control"
+					id="password"
+					placeholder="Enter password"
+				/>
+			</div>
+		</br>
+			<input type="submit" class="submit-button" value="Submit">
+	</br>
+			<p><a href="#">Forgot password?</a></p>
+			<p><a href="new">Create an Account</a></p>
+		</form>
+		</div>
+
+	</div>
+</body>	
+</html>
