--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -3,7 +3,9 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Book Club</title>
+		<title>Book Journal</title>
 	</head>
-	<body></body>
+	<body align="center">
+		<h1>Welcome to your Book Journal 📚</h1>
+	</body>
 </html>
