--- a/templates/create-acct.html
+++ b/templates/create-acct.html
@@ -2,7 +2,7 @@ ${header}
 <html>
 	<body>
 	<div class="container">
-	<form align="center" method="POST" action="/user/home">
+	<form align="center" method="POST">
 		<p><h2>Become a Member!</h2></p>
 		<div class="form-group">
 			<label>
