--- a/templates/home.html
+++ b/templates/home.html
@@ -3,10 +3,11 @@ ${header}
 <html>
 <body>	
 	<div class="container">
-		<form align="center" method="POST" action="/user/new">
+		<form align="center" method="POST">
 			<div class="form-group">
 				<label for="username">Username</label>
 				<input
+					name="username"
 					type="text"
 					class="form-control"
 					id="username"
