--- a/templates/create-acct.html
+++ b/templates/create-acct.html
@@ -1,43 +1,43 @@
-${header}
 <html>
-	<body>
+
+<body>
 	<div class="container">
-	<form align="center" method="POST">
-		<p><h2>Become a Member!</h2></p>
-		<div class="form-group">
-			<label>
-				First Name:
-				<input name="firstname" type="text" placeholder="Enter first name" autofocus />
-			</label>
-		</div>	
-	</br>
-		<div class="form-group">
-			<label>
-				Last Name:
-				<input name="lastname" type="text"/>
-			</label>
-		</div>
-	</br>
-		<div class="form-group">
-			<label>
-				Username:
-				<input name="username" type="text" />
-			</label>
-		</div>
-	</br>
-		<div class="form-group">
-			<label>
-				Password:
-				<input name="password" type="password" />
-			</label>
-		</div>
-	</br>
-		<div class="form-group">
-			<input type="submit" value="Submit" />
-	</form>
+		<form align="center" method="POST">
+			<p>
+			<h2>Become a Member!</h2>
+			</p>
+			<div class="form-group">
+				<label>
+					First Name:
+					<input name="firstname" type="text" placeholder="Enter first name" autofocus />
+				</label>
+			</div>
+			</br>
+			<div class="form-group">
+				<label>
+					Last Name:
+					<input name="lastname" type="text" />
+				</label>
+			</div>
+			</br>
+			<div class="form-group">
+				<label>
+					Username:
+					<input name="username" type="text" />
+				</label>
+			</div>
+			</br>
+			<div class="form-group">
+				<label>
+					Password:
+					<input name="password" type="password" />
+				</label>
+			</div>
+			</br>
+			<div class="form-group">
+				<input type="submit" value="Submit" />
+		</form>
 	</div>
-	</body>
+</body>
+
 </html>
-
-
-
