corrects SSL error

--- a/templates/addbook.html
+++ b/templates/addbook.html
@@ -21,16 +21,20 @@ ${header}
             <label for="status">
                 Status: 
             <select id="status" name="status">
-                <option value="choice-1">Purchased</option>
-                <option value="choice-2">Currently Reading</option>
-                <option value="choice-3">Completed</option>
+                 <option value="wishlist">Wishlist</option>
+                <option value="purchased">Purchased</option>
+                <option value="reading">Currently Reading</option>
+                <option value="completed">Completed</option>
             </select>
         </label>
             </div>
         </div>
     </br>
 
-		<input type="submit" value="Submit" />
+        <input type="submit" value="Submit" />
+        <p>
+            <a href="member-profile">Back to Profile</a>
+        </p>
 	</form>
 </html>
 
