--- a/templates/member-profile.html
+++ b/templates/member-profile.html
@@ -18,7 +18,7 @@
 		id="sectionsNav">
 		<div class="container">
 			<div class="navbar-translate">
-				<a class="navbar-brand" href="https://demos.creative-tim.com/material-kit/index.html"
+				<a class="navbar-brand"
 					target="_blank">Reader Profile </a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false"
 					aria-label="Toggle navigation">
@@ -35,11 +35,11 @@
 							<i class="material-icons">apps</i> Navigation
 						</a>
 						<div class="dropdown-menu dropdown-with-icons">
-							<a href="../index.html" class="dropdown-item">
-								<i class="material-icons">layers</i> Home
+							<a href="explore" class="dropdown-item">
+								<i class="material-icons">layers</i> Explore
 							</a>
 
-							<a href="https://demos.creative-tim.com/material-kit/docs/2.0/getting-started/introduction.html"
+							<a href="logout"
 								class="dropdown-item">
 								<i class="material-icons">content_paste</i> Sign Out
 							</a>
@@ -63,7 +63,7 @@
 									alt="Circle Image" class="img-raised rounded-circle img-fluid">
 							</div>
 							<div class="name">
-								<h3 class="title">Sarina Lyons</h3>
+								<h3 class="title">(Member Name)</h3>
 								<h6>Member</h6>
 							</div>
 						</div>
@@ -77,25 +77,25 @@
 						<div class="profile-tabs">
 							<ul class="nav nav-pills nav-pills-icons justify-content-center" role="tablist">
 								<li class="nav-item">
-									<a class="nav-link" href="#favorite" role="tab" data-toggle="tab">
+									<a class="nav-link" href="newbook" role="tab">
 										<i class="material-icons">add</i>
 										Add Book
 									</a>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link active" href="#studio" role="tab" data-toggle="tab">
+									<a class="nav-link active" href="booklist" role="tab">
 										<i class="material-icons">menu_book</i>
 										Booklist
 									</a>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link" href="#works" role="tab" data-toggle="tab">
+									<a class="nav-link" href="post/journal" role="tab">
 										<i class="material-icons">create</i>
 										Journal
 									</a>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link" href="#favorite" role="tab" data-toggle="tab">
+									<a class="nav-link" href="post/wishlist" role="tab">
 										<i class="material-icons">favorite</i>
 										Wishlist
 									</a>
