--- a/templates/create-acct.html
+++ b/templates/create-acct.html
@@ -36,6 +36,7 @@
 			</br>
 			<div class="form-group">
 				<input type="submit" value="Submit" />
+			<p><a href="home">Home</a></p>
 		</form>
 	</div>
 </body>
