--- a/templates/wishlist.html
+++ b/templates/wishlist.html
@@ -156,7 +156,7 @@
 </head>
 
 <body translate="no">
-	<h4>Book List</h4>
+	<h4>Wishlist</h4>
 	<hr>
 	<div class="border-card">
 		<div class="card-type-icon with-border">1</div>
