--- a/templates/home.html
+++ b/templates/home.html
@@ -1,39 +1,164 @@
-${header}
+<!DOCTYPE html>
+<html lang="en">
 
-<html>
-<body>	
-	<div class="container">
-		<form align="center" method="POST">
-			<div class="form-group">
-				<label for="username">Username</label>
-				<input
-					name="username"
-					type="text"
-					class="form-control"
-					id="username"
-					placeholder="Enter username"
-					autofocus
-				/>
-			</div>
-		</br>
-			<div class="form-group">
-				<label for="password">Password</label>
-				<input
-					name="password"
-					type="password"
-					class="form-control"
-					id="password"
-					placeholder="Enter password"
-				/>
-			</div>
-		</br>
-			<input type="submit" class="submit-button" value="Submit">
-	</br>
-			<p><a href="#">Forgot password?</a></p>
-			<p><a href="new">Create an Account</a></p>
-		</form>
-		</div>
+<head>
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons">
+	<link rel="stylesheet"
+		href="https://unpkg.com/bootstrap-material-design@4.1.1/dist/css/bootstrap-material-design.min.css"
+		integrity="sha384-wXznGJNEXNG1NFsbm0ugrLFMQPWswR3lds2VeinahP8N0zJw9VWSopbjv2x7WCvX" crossorigin="anonymous">
+	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
+	<link rel="stylesheet" type="text/css"
+		href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons">
+	<link rel="stylesgeet"
+		href="https://rawgit.com/creativetimofficial/material-kit/master/assets/css/material-kit.css">
+	<style>
+		/* .container {
+			display: flex;
+			flex-direction: row;
+			position: relative;
+		}
 
+		.form-group {
+			display: flex;
+			align-items: center;
+			position: relative;
+		} */
+
+		.jumbotron {
+			color: white;
+			font-family: "Roboto";
+			background-image: url("/backend-digital-bookclub/images/login.jpg");
+			background-position: center;
+			background-repeat: no-repeat;
+			background-size: cover;
+			height: 100vh;
+		}
+
+		.form-group {
+			color: white;
+		}
+	</style>
+</head>
+
+<body class="profile-page">
+
+	<div class="page-header header-filter" data-parallax="true"
+		style="background-image:url('http://wallpapere.org/wp-content/uploads/2012/02/black-and-white-city-night.png');">
 	</div>
-</body>	
+	<div class="main main-raised">
+		<div class="profile-content">
+			<div class="container">
+				<html>
+
+				<body>
+					<div class="jumbotron jumbotron-fluid">
+						<div class="container">
+							<h1 class="display-4">SOUL READS</h1>
+
+							<div class="container">
+								<form align="left" method="POST">
+									<div class="form-group">
+										<label for="username">Username</label>
+										<input name="username" type="text" class="form-control" id="username"
+											placeholder="Enter username" autofocus />
+									</div>
+									</br>
+									<div class="form-group">
+										<label for="password">Password</label>
+										<input name="password" type="password" class="form-control" id="password"
+											placeholder="Enter password" />
+									</div>
+									</br>
+									<input type="submit" class="submit-button" value="Submit">
+									</br>
+									<p><a href="#">Forgot password?</a></p>
+									<p><a href="new">Create an Account</a></p>
+								</form>
+							</div>
+						</div>
+					</div>
+
+
+
+			</div>
+</body>
+
+</html>
+
+
+<!-- <div class="row">
+					<div class="col-md-6 ml-auto mr-auto">
+						<div class="profile">
+							<div class="avatar">
+								<img src="https://t4.ftcdn.net/jpg/01/65/98/53/360_F_165985319_GPU5ALSAgJkkJ0rRE2V1d8plcen3aANg.jpg"
+									alt="Circle Image" class="img-raised rounded-circle img-fluid">
+							</div>
+							<div class="name">
+								<h3 class="title">(Member Name)</h3>
+								<h6>Member</h6>
+							</div>
+						</div>
+					</div>
+				</div> -->
+<!-- <div class="description text-center">
+					<p>Welcome to your reader profile. </p>
+				</div> -->
+<!-- <div class="row">
+					<div class="col-md-6 ml-auto mr-auto">
+						<div class="profile-tabs">
+							<ul class="nav nav-pills nav-pills-icons justify-content-center" role="tablist">
+								<li class="nav-item">
+									<a class="nav-link" href="newbook" role="tab">
+										<i class="material-icons">add</i>
+										Add Book
+									</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link active" href="booklist" role="tab">
+										<i class="material-icons">menu_book</i>
+										Booklist
+									</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link" href="post/journal" role="tab">
+										<i class="material-icons">create</i>
+										Journal
+									</a>
+								</li>
+								<li class="nav-item">
+									<a class="nav-link" href="post/wishlist" role="tab">
+										<i class="material-icons">favorite</i>
+										Wishlist
+									</a>
+								</li>
+							</ul>
+						</div>
+					</div>
+
+					<div class="tab-content tab-space">
+
+					</div>
+				</div> -->
+</div>
+</div>
+
+<!-- <footer class="footer text-center ">
+			<p>Made with <a href="https://demos.creative-tim.com/material-kit/index.html" target="_blank">Member Kit</a>
+			</p>
+		</footer> -->
+
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://unpkg.com/popper.js@1.12.6/dist/umd/popper.js"
+	integrity="sha384-fA23ZRQ3G/J53mElWqVJEGJzU0sTs+SvzG8fXVWP+kJQ1lwFAOkcUOysnlKJC33U" crossorigin="anonymous">
+</script>
+<script src="https://unpkg.com/bootstrap-material-design@4.1.1/dist/js/bootstrap-material-design.js"
+	integrity="sha384-CauSuKpEqAFajSpkdjv3z9t8E7RlpJ1UP0lKM/+NdtSarroVKu069AlsRPKkFBz9" crossorigin="anonymous">
+</script>
+
+
+
+
+</body>
+
 </html>
