--- a/templates/book.html
+++ b/templates/book.html
@@ -1,14 +1,33 @@
-<!DOCTYPE html>
+${header}
 <html lang="en">
 
-<head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>View Book</title>
-</head>
+		<title>View Book</title>
+	</head>
 
-<body>
+	<body>
+		<ul>
 
-</body>
+			<li>
+				<div>
+					<p>Title: ${book.title}</p>
+					<p>Author: ${book.author}</p>
+					<p>Status: ${book.status}</p>
 
+					<p><a href="edit">Edit</a></p>
+					<p>
+						<!-- <form method="POST" action="${book.id}/delete"> -->
+						<a href="delete">Delete</a>
+						</form>
+					</p>
+				</div>	
+				<div>
+					<p><a href="#">Add Journal Entry</a></p>
+					<p><a href="booklist">Return to Booklist</a></p>
+				</div>
+			
+			</li>
+
+		</ul>
+		</ul>
+	</body>
 </html>
