--- a/templates/member-profile.html
+++ b/templates/member-profile.html
@@ -17,7 +17,13 @@
 		} */
 
 		.title {
-			color: #8811c5;
+			
+			color: #CCB73C;
+			
+
+		}
+		.navbar-translate {
+			color: #CCB73C;
 
 		}
 	</style>
