--- a/templates/addbook.html
+++ b/templates/addbook.html
@@ -1,94 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+  <head>
+    <link
+      href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
+      rel="stylesheet"
+      id="bootstrap-css"
+    />
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <style>
-        .note {
-            text-align: center;
-            height: 80px;
-            background: -webkit-linear-gradient(left, #61e290, #8811c5);
-            color: #fff;
-            font-weight: bold;
-            line-height: 80px;
-        }
+      .note {
+        text-align: center;
+        background-image: url("/backend-digital-bookclub/images/login.jpg");
+        color: rgb(243, 235, 117);
+        font-family: "Roboto";
+        display: wrap;
+        font-size: 50px;
+        font-weight: 100;
+      }
 
-        .form-content {
-            padding: 5%;
-            border: 1px solid #ced4da;
-            margin-bottom: 2%;
-        }
+      .form-content {
+        padding: 5%;
+        border: 1px solid #ced4da;
+        margin-bottom: 2%;
+      }
 
-        .form-control {
-            border-radius: 1.5rem;
-        }
+      .form-control {
+        border-radius: 1.5rem;
+      }
 
-        .btnSubmit {
-            border: none;
-            border-radius: 1.5rem;
-            padding: 1%;
-            width: 20%;
-            cursor: pointer;
-            background: #8811c5;
-            color: #fff;
-        }
+      .btnSubmit {
+        border: none;
+        border-radius: 1.5rem;
+        padding: 1%;
+        width: 20%;
+        cursor: pointer;
+        background: #ccb73c;
+        color: #fff;
+      }
     </style>
-</head>
+  </head>
 
-<body>
-
+  <body>
     <div class="container register-form">
-        <div class="form">
-            <div class="note" align=center>
-                <p>Add a Book</p>
-            </div>
-
-            <div class="form-content">
-                <div class="row">
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Title *" value="" />
-                        </div>
-                        <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Genre *" value="" />
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Author *" value="" />
-                        </div>
-                        <div class="form-group">
-                            <input type="text" class="form-control" placeholder="ISBN *" value="" />
-                        </div>
-                    </div>
-                </div>
-                <button type="button" class="btnSubmit">Submit</button>
-            </div>
+      <div class="form">
+        <div class="note" align="center">
+          <p>ADD A BOOK</p>
         </div>
+
+        <div class="form-content">
+          <div class="row">
+            <div class="col-md-6">
+              <div class="form-group">
+                <input
+                  type="text"
+                  class="form-control"
+                  placeholder="Title *"
+                  value=""
+                />
+              </div>
+              <div class="form-group">
+                <input
+                  type="text"
+                  class="form-control"
+                  placeholder="Genre *"
+                  value=""
+                />
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="form-group">
+                <input
+                  type="text"
+                  class="form-control"
+                  placeholder="Author *"
+                  value=""
+                />
+              </div>
+              <div class="form-group">
+                <input
+                  type="text"
+                  class="form-control"
+                  placeholder="ISBN *"
+                  value=""
+                />
+              </div>
+            </div>
+          </div>
+          <button type="button" class="btnSubmit">Submit</button>
+        </div>
+      </div>
     </div>
 
-
-
-
-    <footer class="footer text-center ">
-
-    </footer>
+    <footer class="footer text-center"></footer>
 
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://unpkg.com/popper.js@1.12.6/dist/umd/popper.js"
-        integrity="sha384-fA23ZRQ3G/J53mElWqVJEGJzU0sTs+SvzG8fXVWP+kJQ1lwFAOkcUOysnlKJC33U" crossorigin="anonymous">
-    </script>
-    <script src="https://unpkg.com/bootstrap-material-design@4.1.1/dist/js/bootstrap-material-design.js"
-        integrity="sha384-CauSuKpEqAFajSpkdjv3z9t8E7RlpJ1UP0lKM/+NdtSarroVKu069AlsRPKkFBz9" crossorigin="anonymous">
-    </script>
-
-
-
-
-</body>
-
+    <script
+      src="https://unpkg.com/popper.js@1.12.6/dist/umd/popper.js"
+      integrity="sha384-fA23ZRQ3G/J53mElWqVJEGJzU0sTs+SvzG8fXVWP+kJQ1lwFAOkcUOysnlKJC33U"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://unpkg.com/bootstrap-material-design@4.1.1/dist/js/bootstrap-material-design.js"
+      integrity="sha384-CauSuKpEqAFajSpkdjv3z9t8E7RlpJ1UP0lKM/+NdtSarroVKu069AlsRPKkFBz9"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
