--- a/templates/booklist.html
+++ b/templates/booklist.html
@@ -25,8 +25,8 @@
 	h4 {
 		font-family: "Roboto";
 		font-weight: 500;
-		font-size: 14px;
-		color: #8811c5;
+		font-size: 20px;
+		color: #CCB73C;
 		text-transform: uppercase;
 		margin: 0;
 	}
