--- a/templates/booklist.html
+++ b/templates/booklist.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<<<<<<< HEAD
 
 <head>
 	<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
@@ -23,7 +22,6 @@
 		padding: 120px;
 	}
 
-<<<<<<< HEAD
 	h4 {
 		font-family: "Roboto";
 		font-weight: 500;
@@ -261,21 +259,13 @@
 		});
 		//# sourceURL=pen.js
 	</script>
-=======
-<body>
-	<h1>View member book list</h1>
->>>>>>> main
 </body>
 
 </html>
-=======
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Book List</title>
-	</head>
 
-	<body>
+	
+
+	<!-- <body>
 		<h1>View member book list</h1>
 		<ul>
 			${ books.map(b => `
@@ -287,5 +277,5 @@
 		</ul>
 		<p><a href="member-profile">Back to Profile</a></p>
 	</body>
-</html>
->>>>>>> 2ba53a591408e4c07e974188cb17d67bbecf58a1
+</html> -->
+
